--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,11 @@
 [project]
-name = "server"
+name = "productspyderscrapingextension"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "flask[async]>=3.1.0",
-    "flask-sock>=0.7.0",
-    "gunicorn>=23.0.0",
-    "flask-socketio>=5.5.1",
-    "python-socketio>=5.13.0",
-    "requests>=2.32.3",
-    "gevent>=25.4.2",
-    "selectolax>=0.3.29",
-    "orjson>=3.10.18",
-    "price-parser>=0.4.0",
-    "curl-cffi>=0.11.1",
-    "pillow>=11.3.0",
+    "fastapi>=0.116.1",
+    "python-dotenv>=1.1.1",
+    "zendriver>=0.13.1",
 ]
