--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
     "python-dotenv>=1.1.1",
+    "uvicorn>=0.35.0",
     "zendriver>=0.13.1",
 ]
