Rechanaged to previous implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-data
-.env
-screenshots
+# Python-generated files
+__pycache__/
+server/_pycache_/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+.venv
+dist
+node_modules
